--- a/MetHonig/index.html
+++ b/MetHonig/index.html
@@ -22,7 +22,7 @@
 			<div class="block">
 			<div class="main-content scrollable">
 				<!--Main block -->
-				<div class="block pink">
+				<div class="block pink2">
 					<div class="top">
 						<div class="holder">
 							<div class="bg">
